# leptos-trunk-learn

./: Cargo.toml  Trunk.toml  index.html
src/: main.rs  nav.rs  nested.rs  res.rs
